--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
                 <div class="col-lg-12 text-center">
                     <div class="chapter">
                         <p>
-                            Siesta is an object relational mapper based on stored procedures for PHP.<br>
+                            Siesta is an object relational mapper based on stored procedures for PHP.
                             There are many good orm for php available. So why write a new one?
                             <ul>
-                                <li>First of all : it is fun</li>
-                                <li>Stored procedures are fast, that is why every interaction with the database is done via Stored procedures</li>
+                                <li>First of all : it is fun to build</li>
+                                <li>I couldn't find an ORM that works solely with stored procedures</li>
+                                <li>The use of stored procedures allow to work do cool stuff like table delimiting</li>
                             </ul>
                         </p>
                     </div>
