--- a/entities.html
+++ b/entities.html
@@ -65,10 +65,10 @@
                         <a href="/index.html">Relationships</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/index.html">Stored Procedures</a>
+                        <a href="/storedprocedure.html">Stored Procedures</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/index.html">Driver</a>
+                        <a href="/driver.html">Driver</a>
                     </li>
                 </ul>
             </div>
